k8s/registry/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: distopia-registry
  namespace: distopia
spec:
  selector:
    app.kubernetes.io/name: distopia-registry
  ports:
    - name: http
      port: 5000
      targetPort: http
